--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 	<h1 data-v-show="hello">hi</h1>
+	<p data-v-if="hello">pociongi</p>
 	<script src="./script.js"></script>
 	<script defer>
 		"use strict";
