--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 	<div data-v-once>
 		<p data-v-html="msg"></p>
 	</div>
+	<input type="text" data-v-model="kasztan">
+	<p>hello <span data-v-text="kasztan"></span></p>
 	<button data-v-on="click:alert('haha yes');">kilk me</button>
 	<script src="./script.js"></script>
 	<script defer>
